--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -8,3 +8,18 @@ jobs:
       - instance-size:small
     steps:
       - run: echo "Hello Terraform  2 World!"
+  Can-I-Assume-Role:
+    runs-on:
+      - codebuild-github_project-${{ github.run_id }}-${{ github.run_attempt }}
+      - image:arm-3.0
+      - instance-size:small
+    steps:
+      - name: Assume Role
+        uses: aws-actions/configure-aws-credentials@v4.0.2
+        with: 
+          role-to-assume: arn:aws:iam::874500785305:role/codebuild-service-role
+          role-session-name: AssumeRoleSession
+          aws-region: us-east-1
+      - name: Get Caller Identity
+        run: | 
+          aws sts get-caller-identity
