--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,9 +29,12 @@ jobs:
       - image:arm-3.0
       - instance-size:small
     steps:
-      - name: Terraform Init
+      - name: Terraform Setup
         uses: hashicorp/setup-terraform@v3
+        uses: actions/checkout@v4
+
+      - name: Terraform Init
         with: 
-          tf_actions_working_dir: ./terraform
+          working-directory: ./terraform
         run: | 
           terraform init
