--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - run: echo "Hello Terraform  2 World!"
   Can-I-Assume-Role:
+    depends-on: Hello-World-Job
     runs-on:
       - codebuild-github_project-${{ github.run_id }}-${{ github.run_attempt }}
       - image:arm-3.0
@@ -24,6 +25,7 @@ jobs:
         run: | 
           aws sts get-caller-identity
   Can-I-Run-Terraform:
+    depends-on: Can-I-Assume-Role
     runs-on:
       - codebuild-github_project-${{ github.run_id }}-${{ github.run_attempt }}
       - image:arm-3.0
@@ -32,4 +34,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
       - name: Terraform Init
+        with: 
+          working-directory: ./terraform
         run: terraform init
