--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -33,6 +33,7 @@ jobs:
     steps:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
+        uses: actions/checkout@v3
         with: 
           working-directory: ./terraform
       - run: terraform -chdir=./terraform init --backend-config=config/dev.config
