--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=./terraform init --backend-config=config/dev.config 
       - name: Terraform Plan
-        run: terraform -chdir=./terraform plan -var-file=config/dev.config
+        run: terraform -chdir=./terraform plan -var-file=config/dev.tfvars
