--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -3,5 +3,5 @@ on: [push]
 jobs:
   Run-On-Push-Job:
     uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_push.yml@main
-    with:
-      repository-name: ${{ github.repository }}
+      #    with:
+      #repository-name: ${{ github.repository }}
