--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -5,7 +5,7 @@ on:
       - 'main'
       - 'master'
     jobs:
-    Run-On-Push-Job:
-      uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_push.yml@main
-      #    with:
-      #repository-name: ${{ github.repository }}
+      - name: On Push
+        uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_push.yml@main
+          #with:
+          #repository-name: ${{ github.repository }}
