--- a/.github/workflows/app_workflow.yml
+++ b/.github/workflows/app_workflow.yml
@@ -6,6 +6,6 @@ on:
       - 'master'
 jobs:
   On_Push:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_push.yml@main
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_push.yml@templates_setup
           #with:
           #repository-name: ${{ github.repository }}
