Fix Syntax Error in on_pull_request.yml

--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,6 +1,6 @@
-name: On Push
+name: On Pull Request
 on: 
-  pull-request:
+  pull_request:
     branches-ignore:
       - 'main'
       - 'master'
