--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,12 +1,10 @@
 name: On Pull Request
 on: 
   pull_request:
-    branches-ignore:
+    branches:
       - 'main'
-      - 'master'
 jobs:
   On_Push:
     uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_pull_request.yml@templates_setup
     with:
       branch: ${{ github.head_ref || github.ref_name }}
-#
