--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -5,4 +5,4 @@ on:
       - 'main'
 jobs:
   On_Push:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_merge.yml@templates_setup
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_merge.yml@main
