--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -5,6 +5,6 @@ on:
       - 'main'
 jobs:
   On_Push:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_pull_request.yml@templates_setup
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_pull_request.yml@main
     with:
       branch: ${{ github.head_ref || github.ref_name }}
