--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -6,6 +6,7 @@ on:
       - 'master'
 jobs:
   On_Push:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_push.yml@main
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_push.yml@repo_branch
     with:
       branch: ${{ github.head_ref || github.ref_name }}
+      repository: ${{ github.event.repository.name }}
