--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -3,7 +3,7 @@ on:
   delete:
 jobs:
   On_Delete:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_delete.yml@repo_branch
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_delete.yml@main
     with:
       branch: ${{ github.event.ref }}
       repository: ${{ github.event.repository.name }}
