--- a/.github/workflows/on_tag.yml
+++ b/.github/workflows/on_tag.yml
@@ -5,6 +5,6 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 jobs:
   On_Tag:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_tag.yml@repo_branch
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_tag.yml@main
     with:
       repository: ${{ github.event.repository.name }}
