--- a/.github/workflows/ecs_test_redeploy.yml
+++ b/.github/workflows/ecs_test_redeploy.yml
@@ -2,6 +2,6 @@ name: ECS Test Redeploy
 on: [workflow_dispatch]
 jobs:
   ECS_Test_Redeploy:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/ecs_test_redeploy.yml@main
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/ecs_test_redeploy.yml@build_setup
     with:
       repository: ${{ github.event.repository.name }}
