--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -5,6 +5,6 @@ on:
       - 'main'
 jobs:
   On_Merge:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_merge.yml@build_setup
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_merge.yml@main
     with: 
       repository: ${{ github.event.repository.name }}
