--- a/.github/workflows/on_tag.yml
+++ b/.github/workflows/on_tag.yml
@@ -5,7 +5,7 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 jobs:
   On_Tag:
-    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_tag.yml@build_setup
+    uses: srhoton/srhoton-nd-github-actions-templates/.github/workflows/on_tag.yml@main
     with:
       repository: ${{ github.event.repository.name }}
       tag: ${{ github.ref_name }}
